{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "XRRightController",
            "id": "890493ec-57aa-44be-821a-748591a4eb12",
            "actions": [
                {
                    "name": "position",
                    "type": "Value",
                    "id": "aae2267e-c743-46f1-921d-61468737d2ff",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "65ec354a-53be-4ae3-8bfa-d4d21b67996b",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerAxis",
                    "type": "Value",
                    "id": "22a211f0-52f5-4789-a609-c13b4370fbec",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripAxis",
                    "type": "Value",
                    "id": "b1d8e1dc-ed4e-45af-b1d0-65c046ad68da",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerPress",
                    "type": "Button",
                    "id": "825d7b2b-0f97-457b-90ce-7bbd8f3116b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0411468-4497-43ce-b6cd-ba460fdd7377",
                    "path": "<XRController>{RightHand}/pointerPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a94feda1-dbfc-430d-b33c-61f3a8532e28",
                    "path": "<XRController>{RightHand}/pointerRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b02aff16-551f-4524-a272-1157f7979500",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11e75099-28b9-4319-8db4-cfcf13502c5c",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e356f31e-1bd7-4f84-862c-d1b31f533162",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}